--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,10 @@
         android:name="com.example.techpowerhour.ui.add_power_hour.AddPowerHourFragment"
         android:label="AddPowerHour"
         tools:layout="@layout/fragment_add_power_hour" />
+
+    <fragment
+        android:id="@+id/navigation_user_power_hour_list"
+        android:name="com.example.techpowerhour.ui.user_power_hour_list.UserPowerHourListFragment"
+        android:label="UserPowerHourList"
+        tools:layout="@layout/fragment_user_power_hour_list" />
 </navigation>
