--- a/app/src/main/res/layout/fragment_user_power_hour_list.xml
+++ b/app/src/main/res/layout/fragment_user_power_hour_list.xml
@@ -5,9 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.user_power_hour_list.UserPowerHourListFragment">
 
-    <TextView
+    <ListView
+        android:id="@+id/powerHourList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_marginTop="25dp"
+        android:listSelector="@android:color/darker_gray" />
 
 </FrameLayout>
