--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,14 +17,98 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp">
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/company_points_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/company_points_layout_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_company_points_statistics_title"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.045"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RelativeLayout
+                    android:id="@+id/company_points_layout_today"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackground"
+                    android:minHeight="64dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/company_points_layout_header"
+                    app:layout_constraintVertical_bias="0.0"
+                    tools:layout_editor_absoluteX="0dp">
+
+                    <TextView
+                        android:id="@+id/company_points_layout_today_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:paddingTop="16dp"
+                        android:paddingHorizontal="16dp"
+                        android:text="@string/home_company_points_statistics_title_today"
+                        android:textAppearance="?attr/textAppearanceSubtitle1" />
+
+                    <TextView
+                        android:id="@+id/company_points_layout_today_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/company_points_layout_today_title"
+                        android:layout_gravity="center_vertical"
+                        android:maxLines="2"
+                        android:paddingHorizontal="16dp"
+                        android:text="150 points recorded today"
+                        android:textAppearance="?attr/textAppearanceBody2" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/company_points_layout_week"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/company_points_layout_today"
+                    android:background="?attr/selectableItemBackground"
+                    android:minHeight="64dp"
+                    app:layout_constraintTop_toBottomOf="@+id/company_points_layout_today">
+
+                    <TextView
+                        android:id="@+id/company_points_layout_week_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:paddingHorizontal="16dp"
+                        android:paddingTop="16dp"
+                        android:text="@string/home_company_points_statistics_title_week"
+                        android:textAppearance="?attr/textAppearanceSubtitle1" />
+
+                    <TextView
+                        android:id="@+id/company_points_layout_week_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/company_points_layout_week_title"
+                        android:layout_gravity="center_vertical"
+                        android:maxLines="2"
+                        android:paddingHorizontal="16dp"
+                        android:text="150 points recorded this week"
+                        android:textAppearance="?attr/textAppearanceBody2" />
+
+                </RelativeLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="50dp">
 
                 <Button
                     android:id="@+id/addWalkButton"
@@ -44,12 +128,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="40dp"
                     android:onClick="@{() -> viewModel.addPowerHourRun()}"
                     android:text="Add Run"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/deleteAllButton"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <Button
                     android:id="@+id/deleteAllButton"
@@ -66,7 +151,7 @@
             <ListView
                 android:id="@+id/powerHourList"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="368dp"
                 android:layout_marginTop="25dp"
                 android:listSelector="@android:color/darker_gray" />
         </LinearLayout>
