--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+<!--            BT Point Statistics-->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/company_points_layout"
                 android:layout_width="match_parent"
@@ -135,6 +136,125 @@
                 </RelativeLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--            BT Power Hour Statistics-->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/company_power_hours_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/company_power_hours_layout_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_company_power_hour_statistics_title"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.045"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RelativeLayout
+                    android:id="@+id/company_power_hours_layout_today"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackground"
+                    android:minHeight="64dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/company_power_hours_layout_header"
+                    app:layout_constraintVertical_bias="0.0"
+                    tools:layout_editor_absoluteX="0dp">
+
+                    <TextView
+                        android:id="@+id/company_power_hours_layout_today_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:paddingTop="16dp"
+                        android:paddingHorizontal="16dp"
+                        android:text="@string/home_company_power_hour_statistics_title_today"
+                        android:textAppearance="?attr/textAppearanceSubtitle1" />
+
+                    <TextView
+                        android:id="@+id/company_power_hours_layout_today_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/company_power_hours_layout_today_title"
+                        android:layout_gravity="center_vertical"
+                        android:maxLines="2"
+                        android:paddingHorizontal="16dp"
+                        android:text="150 points recorded today"
+                        android:textAppearance="?attr/textAppearanceBody2" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/company_power_hours_layout_week"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/company_power_hours_layout_today"
+                    android:background="?attr/selectableItemBackground"
+                    android:minHeight="64dp"
+                    app:layout_constraintTop_toBottomOf="@+id/company_power_hours_layout_today">
+
+                    <TextView
+                        android:id="@+id/company_power_hours_layout_week_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:paddingHorizontal="16dp"
+                        android:paddingTop="16dp"
+                        android:text="@string/home_company_power_hour_statistics_title_week"
+                        android:textAppearance="?attr/textAppearanceSubtitle1" />
+
+                    <TextView
+                        android:id="@+id/company_power_hours_layout_week_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/company_power_hours_layout_week_title"
+                        android:layout_gravity="center_vertical"
+                        android:maxLines="2"
+                        android:paddingHorizontal="16dp"
+                        android:text="150 points recorded this week"
+                        android:textAppearance="?attr/textAppearanceBody2" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/company_power_hours_layout_month"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/company_power_hours_layout_week"
+                    android:background="?attr/selectableItemBackground"
+                    android:minHeight="64dp"
+                    app:layout_constraintTop_toBottomOf="@+id/company_power_hours_layout_week">
+
+                    <TextView
+                        android:id="@+id/company_power_hours_layout_month_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:paddingHorizontal="16dp"
+                        android:paddingTop="16dp"
+                        android:text="@string/home_company_power_hour_statistics_title_month"
+                        android:textAppearance="?attr/textAppearanceSubtitle1" />
+
+                    <TextView
+                        android:id="@+id/company_power_hours_layout_month_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/company_power_hours_layout_month_title"
+                        android:layout_gravity="center_vertical"
+                        android:maxLines="2"
+                        android:paddingHorizontal="16dp"
+                        android:text="150 points recorded this month"
+                        android:textAppearance="?attr/textAppearanceBody2" />
+
+                </RelativeLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
