--- a/app/src/main/res/layout/fragment_user_power_hour_list.xml
+++ b/app/src/main/res/layout/fragment_user_power_hour_list.xml
@@ -18,4 +18,14 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:contentDescription="@string/fab_add_content"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_input_add" />
+
 </FrameLayout>
