--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -71,8 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/profile_header_layout"
-                tools:layout_editor_absoluteX="0dp">
+                app:layout_constraintTop_toBottomOf="@+id/profile_header_layout">
 
                 <TextView
                     android:id="@+id/statistics_layout_heading"
@@ -154,19 +153,26 @@
                         android:textAppearance="?attr/textAppearanceBody2" />
 
                 </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/controls_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/statistics_layout"
+                android:layout_marginTop="16dp">
 
                 <TextView
-                    android:id="@+id/controls_layout"
+                    android:id="@+id/controls_layout_heading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:text="@string/profile_controls_title"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.043"
+                    app:layout_constraintHorizontal_bias="0.045"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/statistics_number_workouts_layout" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <RelativeLayout
                     android:id="@+id/controls_power_hour_list_layout"
@@ -177,14 +183,14 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/controls_layout"
+                    app:layout_constraintTop_toBottomOf="@+id/controls_layout_heading"
                     app:layout_constraintVertical_bias="0.0">
 
                     <TextView
                         android:id="@+id/controls_power_hour_list_title"
-                        android:layout_alignParentStart="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
                         android:layout_marginStart="-1dp"
                         android:layout_marginEnd="16dp"
                         android:layout_toStartOf="@+id/controls_power_hour_end_icon"
@@ -196,16 +202,16 @@
 
                     <TextView
                         android:id="@+id/controls_power_hour_list_text"
-                        android:layout_alignParentStart="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/controls_power_hour_list_title"
+                        android:layout_alignParentStart="true"
                         android:layout_gravity="center_vertical"
                         android:layout_marginEnd="16dp"
                         android:layout_toStartOf="@+id/controls_power_hour_end_icon"
                         android:maxLines="2"
                         android:paddingHorizontal="16dp"
-                        android:text="@string/controls_power_hour_list_text"
+                        android:text="@string/profile_controls_power_hour_list_text"
                         android:textAppearance="?attr/textAppearanceBody2" />
 
                     <ImageView
@@ -218,6 +224,80 @@
                         android:layout_marginEnd="16dp"
                         android:contentDescription="@string/profile_power_hour_list_chevron"
                         android:src="@drawable/ic_chevron_right_24dp" />
+
+                </RelativeLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/account_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/controls_layout"
+                android:layout_marginTop="16dp">
+
+                <TextView
+                    android:id="@+id/account_layout_heading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/profile_account_title"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.045"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RelativeLayout
+                    android:id="@+id/account_signout_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackground"
+                    android:minHeight="64dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/account_layout_heading"
+                    app:layout_constraintVertical_bias="0.0">
+
+                    <TextView
+                        android:id="@+id/account_signout_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="-1dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_toStartOf="@+id/account_signout_end_icon"
+                        android:maxLines="1"
+                        android:paddingHorizontal="16dp"
+                        android:paddingTop="16dp"
+                        android:text="@string/profile_account_signout_subheading"
+                        android:textAppearance="?attr/textAppearanceSubtitle1" />
+
+                    <TextView
+                        android:id="@+id/account_signout_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/account_signout_title"
+                        android:layout_alignParentStart="true"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="16dp"
+                        android:layout_toStartOf="@+id/account_signout_end_icon"
+                        android:maxLines="2"
+                        android:paddingHorizontal="16dp"
+                        android:text="@string/profile_account_signout_text"
+                        android:textAppearance="?attr/textAppearanceBody2" />
+
+                    <ImageView
+                        android:id="@+id/account_signout_end_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:contentDescription="@string/profile_power_hour_list_chevron"
+                        android:src="@drawable/ic_logout_variant_24dp" />
 
                 </RelativeLayout>
 
