--- a/app/src/main/res/layout/fragment_user_power_hour_list.xml
+++ b/app/src/main/res/layout/fragment_user_power_hour_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -20,12 +21,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:contentDescription="@string/fab_add_content"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        android:src="@android:drawable/ic_input_add" />
+        style="@style/AddPowerHourFAB"
+        android:src="@drawable/ic_plus_24dp"
+        android:contentDescription="@string/fab_add_content"/>
 
 </FrameLayout>
