--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home_24dp"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_leaderboard"
-        android:icon="@drawable/ic_leaderboard_black_24dp"
+        android:icon="@drawable/ic_leaderboard_24dp"
         android:title="@string/title_leaderboard" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_account_circle_black_24dp"
+        android:icon="@drawable/ic_account_circle_24dp"
         android:title="@string/title_profile" />
 </menu>
